feat(net): Step 3 Internet & Web lab + full lesson (step-03-end)
Adds net package to playground/java-basics: UrlAnatomy (URL parsing), HttpClientDemo (java.net.http), RawHttpDemo (raw TCP socket HTTP). LoopbackHttpTest exercises both against a self-contained JDK HttpServer; UrlAnatomyTest covers parsing. ./mvnw verify green (20 tests). Hit + fixed a real RFC-9110 header-case bug (Content-type vs Content-Type) now taught in Troubleshooting. requests.http + smoke.sh + ~1300-line lesson covering TCP/IP, DNS, HTTP anatomy, TLS handshake, HTTP/1.1->2->3, load balancers.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>